# scraper

./: .gitignore  README.md
coco/: pyproject.toml
coco/coco/: crawlers.ipynb  property_data.csv  property_data2.csv
coco/data/: jahi-property_data.csv
nigeriapropertycentre/notebooks/: nigeria_property_centre_scraping.ipynb
propertypro/notebooks/: property_pro_scraping.ipynb
spotify/: README.md  requirements.txt
spotify/notebooks/: afrobeats_artists_data.json  spotify_artist.ipynb  spotify_artist_top_25.ipynb
spotify/scripts/: fetch_nigeria_artists_data.py
